assets/styling/titlebar.scss
// Variables
$button-border: solid lightgray 1px;
$button-background-color: #E0E0E0;
$font-size: 16px;

// Main titlebar
.titlebar {
  --titlebar-margin: 4px;

  margin: var(--titlebar-margin);
  display: inline-flex;
  gap: 8px;
  width: calc(100% - var(--titlebar-margin) * 2);
}

.titlebar>div {
  display: inherit;
  width: calc(100% / 3);
}

.titlebar span {
  font-size: $font-size;
  font-weight: 600;
  align-content: center;
  padding: 4px 0 0 4px;
}

// Positioning contents
.titlebar-left {
  justify-content: flex-start;
}

.titlebar-center {
  justify-content: center;
}

.titlebar-right {
  justify-content: flex-end;
}

// Window controls
.window-controls {
  align-items: center;
  display: inline-flex;
  gap: 4px;
  padding-right: 4px;
}

.window-controls>* {
  display: inline-flex;
  background-color: #E0E0E0;
  border: solid lightgray 1px;
  border-radius: 4px;
  align-self: center;
  transition-duration: 200ms;
  width: $font-size;
  height: $font-size;
}

.wcontrol-minimize:hover {
  background-color: #16C31E;
}

.wcontrol-maxmize:hover {
  background-color: #F5DB56;
}

.wcontrol-exit:hover {
  background-color: red;
}

